feat(ilp): wire cursor SF as the only async path; refactor connect string
Wire CursorSendEngine into the public Sender API and collapse the connect-
string surface around it.

* Sender.build(): cursor is the only async ingest path. sfDir present →
  store-and-forward (mmap'd, recoverable); sfDir absent → memory-only ring
  (same lock-free architecture, no disk).
* Connect-string keys reshaped:
  - drop store_and_forward (sf_dir is the on-switch)
  - drop sf_fsync / sf_fsync_on_flush (replaced by sf_durability)
  - drop sf_engine (cursor is unconditional now)
  - sf_durability=memory|flush|append (today only memory works; flush/append
    throw "not yet supported" until cursor learns fsync)
  - size suffixes accepted on sf_max_bytes / sf_max_total_bytes (64m, 4g)
  - default sf_max_bytes 4 MiB; default sf_max_total_bytes 128 MiB
    (memory mode) / 10 GiB (SF mode) — bounded by default rather than the
    previous unlimited foot-gun
* MmapSegment.createInMemory() — memory-backed (Unsafe.malloc) variant for
  the non-SF async path; same on-the-wire layout.
* SegmentManager — when the registered ring's dir is null, provisions
  memory-backed spares and skips file unlink on trim. Producer-thread
  unpark of the worker (eager wakeup) cuts the post-rotation tail by
  preempting the polling tick.
* CursorSendEngine.appendBlocking — bounded backpressure: deadline (default
  30 s) throws LineSenderException; cumulative getTotalBackpressureStalls()
  counter; throttled WARN log every 5 s of sustained backpressure. No more
  silent unbounded waits.
* CursorWebSocketSendLoop.advanceSegment — replaced fixed-size sealed-list
  snapshot with SegmentRing.nextSealedAfter() / firstSealed() lookups.
  Fixes "sealed snapshot grew unexpectedly large" crash when the producer
  outpaces the wire.

Legacy SF and async-queue paths are dead code at the test layer; their
tests are removed and the remaining src files (WebSocketSendQueue,
SegmentLog, InFlightWindow, Reconnector, SfDiskFullExcep